# CUDA-Programming

./: README.md
Blocks/: 1d.cu  2d.cu  occupancy.cu
PoissonBlending/: CMakeLists.txt  lab3.cu  main.cu  output.ppm  pgm.cpp
SharedMemory/: CMakeLists.txt  main.cu
fundamental/ArrayAdd/: README.md  array-add  main.cu  unified_memory.cu
fundamental/GridsBlocks/: Makefile  launch-bounds-1d  launch-bounds-1d.cu  launch-bounds-2d  launch-bounds-2d.cu  occupancy-api  occupancy-api.cu
fundamental/Memory1D/: Makefile  monochrome.cu
fundamental/Memory2D/: Makefile  spotlights.cu
fundamental/debug/: out
fundamental/debug_via_cuda_gdb/: README.md
fundamental/debug_via_numpy/: Makefile  README.md  layernormKernel.cu  layernormKernel.h  main.cpp  validate.py
fundamental/device_memory/: README.md  memory_analysis.cu  memory_analysis.h  output_data_parser.py  run.sh
fundamental/driver_api/: README.md
fundamental/driver_api_runtime_api/: README.md
fundamental/opencv_demo/: Makefile  mat.cpp
